@@ -120,6 +120,7 @@ t/subtest/die.t
 t/subtest/do.t
 t/subtest/exceptions.t
 t/subtest/for_do_t.test
+t/subtest/plan.t
 t/subtest/singleton.t
 t/tbm_doesnt_set_exported_to.t
 t/Tester/tbt_01basic.t
